--- a/public/add_products.html
+++ b/public/add_products.html
@@ -4,7 +4,6 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
 		<script
 			src="https://code.jquery.com/jquery-3.2.1.min.js"
 			crossorigin="anonymous"
@@ -26,18 +25,36 @@
 			integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
 			crossorigin="anonymous"
 		></script>
+
 		<script src="./shop.js"></script>
-		<script src="./index.js"></script>
-		<title>Shoping</title>
+		<script src="./add_products.js"></script>
+		<title>Add Products</title>
 	</head>
 	<body>
-		<div class="container">
-			<div class="row">
-				<div class="col" align="center">
-					<h1>SHOP</h1>
+		<div class="p-4">
+			<h3 class="text-center">Add Product</h3>
+			<div class="row p-4">
+				<div class="col"></div>
+
+				<div class="col-6">
+					<form>
+						<div class="form-group">
+							<label for="productName">Product Name</label>
+							<input type="text" id="productName" />
+						</div>
+						<div class="form-group">
+							<label for="productManufacturer">Manufacturer's Name</label>
+							<input type="text" id="productManufacturer" />
+						</div>
+						<div class="form-group">
+							<label for="productPrice">Price</label>
+							<input type="Number" id="productPrice" />
+						</div>
+						<button id="btnaddProduct" class="btn btn-secondary">Add</button>
+					</form>
 				</div>
+				<div class="col"></div>
 			</div>
-			<div class="row" id="product-list"></div>
 		</div>
 	</body>
 </html>
